tests/k8s_testcases/example_policies/testcase2/testcase2-scheme-demo.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: nt_in
    networkPolicyList:
      - testcase2-networkpolicy1.yaml
  - name: nt_notin
    networkPolicyList:
      - testcase2-networkpolicy2.yaml
  - name: nt_notinwithexists
    networkPolicyList:
      - testcase2-networkpolicy3.yaml

queries:
  - name: compare_policies
    equivalence:
      - nt_in
      - nt_notin
      - nt_notinwithexists
