tests/k8s_testcases/example_policies/testcase2/testcase2-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: nt_in
    networkPolicyList:
      - testcase2-networkpolicy1.yaml
    expectedWarnings: 0

  - name: nt_notin
    networkPolicyList:
      - testcase2-networkpolicy2.yaml
    expectedWarnings: 0

  - name: nt_notinwithexists
    networkPolicyList:
      - testcase2-networkpolicy3.yaml
    expectedWarnings: 0

queries:
  - name: emptiness
    emptiness:
      - nt_in
      - nt_notin
      - nt_notinwithexists
    expected: 0
  - name: redundancies_policies
    redundancy:
      - nt_in
      - nt_notin
      - nt_notinwithexists
    expected: 0
  - name: no_vacuity_policies
    vacuity:
      - nt_in
      - nt_notin
      - nt_notinwithexists
    expected: 0

  - name: compare_policies
    equivalence:
      - nt_in
      - nt_notin
      - nt_notinwithexists
    expected: 2
  - name: no_strong_equivalence
    strongEquivalence:
      - nt_notin
      - nt_notinwithexists
    expected: 1
  - name: no_strong_equivalence_print_all_peers_pairs
    strongEquivalence:
      - nt_notin
      - nt_notinwithexists
    outputConfiguration:
      FullExplanation: true
    expectedOutput: ../../expected_output/no-strong-equivalence-all-peers-pairs.txt
    expected: 1
  - name: pairwiseInterferes_policies
    pairwiseInterferes:
      - nt_in
      - nt_notin
      - nt_notinwithexists
    expected: 2

  - name: containment_notin_and_in
    containment:
      - nt_notin
      - nt_in
    expected: 1
  - name: containment_in_and_notin
    containment:
      - nt_in
      - nt_notin
    expected: 0
